--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,4 +1,3 @@
-
 body {
     margin:0px;
     background-color:#eeeeee;
@@ -15,28 +14,26 @@ body {
     border-bottom:1px solid gray;
 }
 
+
 #idDivLogin {
     margin-left:auto;
     margin-right:auto;
     text-align:center;
-    width:980px;
-    border:1px solid #eeeeee;    
+    width:1000px;
 }
 
 #idDivBusca {
     margin-left:auto;
     margin-right:auto;
     text-align:center;
-    width:980px;
-    border:1px solid #eeeeee;    
+    width:1000px;
 }
 
 #idDivCatalogacao {
     margin-left:auto;
     margin-right:auto;
     text-align:center;
-    width:980px;
-    border:1px solid #eeeeee;    
+    width:1000px;
 }
 
 .botoesProxAnt{
@@ -48,17 +45,18 @@ body {
 }
 
 input[type="text"]{
-    width:530px;
+    width:525px;
 }
 
 #idTabelaResultados {
     background-color:white;
     border:1px solid gray;
-    width:750px;
+    width:820px;
     height:200px;
     overflow-y:scroll;
     margin-left:auto;
     margin-right:auto;
+    text-align:left;
 }
 
 #idRespAutorizacao {
@@ -67,23 +65,50 @@ input[type="text"]{
 }
 
 #idMsgDialogo2 {
+/*    width:890px; */
     text-align:center;
 }
 
 #idMsgDialogo3 {
-    width:890px;
+/*    width:890px; */
     text-align:center;
 }
 
+#idLoading1 {
+/*
+    position:absolute;
+    right:270px;
+    top:345px;
+    z-index:200; 
+*/
+    width:75px;
+    height:75px;
+}
+
+#idLoading2 {
+/*
+    position:absolute;
+    right:270px;
+    top:345px;
+    z-index:200; 
+*/
+    width:75px;
+    height:75px;
+}
+
 .loading{
-    background: transparent url('../images/ajax_loader3.gif') center center no-repeat; /* lembrando que o url é relativo ao arquivo .css */ 
+    background: transparent url('../images/MnyxU75.gif') center center no-repeat; /* lembrando que o url é relativo ao arquivo .css */ 
     height: 75px; /* Importante apenas para garantir que a div possui altura para exibir a imagem */
 }
 
 
+#idpatrimonio2 {
+
+}
+
 #idLabel1 {
-    font-size:18pt;
-    color:black;
+    font-size:22pt;
+    color:white;
     font-weight:bold;
 }
 
@@ -112,32 +137,81 @@ input[type="text"]{
     font-size:14pt;
 }
 
+#tabelaBusca{
+    table-layout:fixed;
+    margin-left:auto;
+    margin-right:auto;    
+}
+
 #tabelaBusca td{
-    width:275px;
+    width:200px;
 }
 
 #tabelaBusca td+td{
-    width:275px;
+    width:268px;
 }
 
 #tabelaBusca td+td+td{
-    width:275px;
+    width:268px;
 }
 
 #tabelaBusca td+td+td+td{
-    width:275px;
+    width:200px;
+}
+
+#tabelaBusca2{
+    table-layout:fixed;
+    margin-left:auto;
+    margin-right:auto;    
+    display:none;
+}
+
+#tabelaBusca2 td{
+    width:200px;
+}
+
+#tabelaBusca2 td+td{
+    width:535px;
+}
+
+#tabelaBusca2 td+td+td{
+    width:200px;
+}
+
+#tabelaCatalogacao{
+    table-layout:fixed;
+    margin-left:auto;
+    margin-right:auto;    
 }
 
 #tabelaCatalogacao td{
-    width:275px;
+    width:200px;
 }
 
 #tabelaCatalogacao td+td{
-    width:550px;
+    width:536px;
 }
 
 #tabelaCatalogacao td+td+td{
-    width:275px;
+    width:200px;
+}
+
+#tabelaCatalogacao2 {
+    table-layout:fixed;
+    margin-left:auto;
+    margin-right:auto;    
+}
+
+#tabelaCatalogacao2 td{
+    width:200px;
+}
+
+#tabelaCatalogacao2 td+td{
+    width:536px;
+}
+
+#tabelaCatalogacao2 td+td+td{
+    width:200px;
 }
 
 table.center {
@@ -157,22 +231,12 @@ tr{
     min-width:60px;
 }
 
-#idLoading {
-    width:75px;
-    height:75px;
-    position:absolute;
-    float:right;
-    top:140px;
-    right:145px;
-    z-index:100;
+#iddata_publicacao21 {
+    width:212px;
 }
 
-#iddatapublicacao21 {
-    width:210px;
-}
-
-#iddatapublicacao22 {
-    width:210px;
+#iddata_publicacao22 {
+    width:212px;
 }
 
 .titulo{
@@ -182,23 +246,25 @@ tr{
 }
 
 .Menu{
-    position:relative;
-    top:6px; 
-    width:140px;
-    background-color:lightgray;
+    position:relative;    
     float:right;    
+    width:140px;
+    height:55px;
+    line-height:50px;    
+    font-weight:bold;
+    color:white;
 }
-
-.Menu:hover {
-    background-color: #292a2c;
-    color: white;
+.spanMenu{
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
 }
 
 .mensagemDialogoVerde{
     text-align:center;
     vertical-align:middle;
     background:#ccffcc;
-    background:radial-gradient(#ccffcc,#eeeeee);
+    background:radial-gradient(#ccffcc,#f1e2af);
     color:green;
     font-weight:bold;
     font-style:italic;
@@ -208,7 +274,7 @@ tr{
     text-align:center;
     vertical-align:middle;
     background:#ffcccc;
-    background:radial-gradient(#ffcccc,#eeeeee);
+    background:radial-gradient(#ffcccc,#f1e2af);
     color:red;
     font-weight:bold;
     font-style:italic;
@@ -218,7 +284,7 @@ tr{
     text-align:center;
     vertical-align:middle;
     background:#ffff66;
-    background:radial-gradient(#ffff66,#eeeeee);
+    background:radial-gradient(#ffff66,#f1e2af);
     color:brown;
     font-weight:bold;
     font-style:italic;
@@ -226,4 +292,33 @@ tr{
 
 .alinha_esquerda {
     text-align:left;
+}
+
+#idNomeArqUpload {
+    border:1px solid lightgray;
+    width:534px;
+    background-color:white;
+}
+
+#idPagAnterior {
+    width:130px;
+}
+
+#idPagProxima {
+    width:130px;
+}
+
+#idPaginaDestino {
+    width:70px;
+    text-align:center;
+}
+
+#idTituloPagina {
+    position:absolute;
+    left:400px;
+    right:400px;
+}
+
+.botoesBusca {
+    width:264px;
 }
